Minor code organization and cleanup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,7 +67,7 @@
             </symbol>
             <symbol id="icon-github" viewBox="0 0 512 512">
                 <title>GitHub</title>
-                <path id="XMLID_2_" d="M256,0C114.6,0,0,114.6,0,256c0,113.1,73.4,209.1,175.1,242.9c12.8,2.4,17.5-5.6,17.5-12.3c0-6.1-0.2-26.3-0.3-47.7C121,454.4,106,408.7,106,408.7c-11.6-29.6-28.4-37.5-28.4-37.5c-23.2-15.9,1.8-15.6,1.8-15.6c25.7,1.8,39.2,26.4,39.2,26.4c22.8,39.1,59.9,27.8,74.5,21.3c2.3-16.5,8.9-27.8,16.3-34.2c-56.9-6.5-116.6-28.4-116.6-126.5c0-27.9,10-50.8,26.4-68.7c-2.7-6.4-11.4-32.5,2.5-67.8c0,0,21.5-6.9,70.4,26.2c20.4-5.7,42.3-8.5,64.1-8.6c21.8,0.1,43.7,2.9,64.1,8.6c48.9-33.1,70.3-26.2,70.3-26.2c13.9,35.3,5.2,61.3,2.5,67.8c16.4,17.9,26.3,40.8,26.3,68.7c0,98.3-59.9,120-116.9,126.3c9.2,7.9,17.4,23.5,17.4,47.4c0,34.3-0.3,61.8-0.3,70.3c0,6.8,4.6,14.8,17.6,12.3C438.7,465,512,369.1,512,256C512,114.6,397.4,0,256,0L256,0z"/>
+                <path d="M256,0C114.6,0,0,114.6,0,256c0,113.1,73.4,209.1,175.1,242.9c12.8,2.4,17.5-5.6,17.5-12.3c0-6.1-0.2-26.3-0.3-47.7C121,454.4,106,408.7,106,408.7c-11.6-29.6-28.4-37.5-28.4-37.5c-23.2-15.9,1.8-15.6,1.8-15.6c25.7,1.8,39.2,26.4,39.2,26.4c22.8,39.1,59.9,27.8,74.5,21.3c2.3-16.5,8.9-27.8,16.3-34.2c-56.9-6.5-116.6-28.4-116.6-126.5c0-27.9,10-50.8,26.4-68.7c-2.7-6.4-11.4-32.5,2.5-67.8c0,0,21.5-6.9,70.4,26.2c20.4-5.7,42.3-8.5,64.1-8.6c21.8,0.1,43.7,2.9,64.1,8.6c48.9-33.1,70.3-26.2,70.3-26.2c13.9,35.3,5.2,61.3,2.5,67.8c16.4,17.9,26.3,40.8,26.3,68.7c0,98.3-59.9,120-116.9,126.3c9.2,7.9,17.4,23.5,17.4,47.4c0,34.3-0.3,61.8-0.3,70.3c0,6.8,4.6,14.8,17.6,12.3C438.7,465,512,369.1,512,256C512,114.6,397.4,0,256,0L256,0z"/>
             </symbol>
             <symbol id="icon-codepen" viewBox="0 0 512 512">
                 <title>Codepen</title>
@@ -84,93 +84,95 @@
         </svg>
     </div>
 
+    <div class="svg-logos">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display: none;">
+            <symbol id="logo--basic" viewBox="0 0 124 84">
+                <style>
+                    .bt0{fill:#a5eeff}
+                    .bt1{fill:#8d8c8e}
+                    .bt2{fill:none;
+                      stroke:#000;
+                      stroke-width:4;
+                      stroke-linecap:round;
+                      stroke-linejoin:round;
+                      stroke-miterlimit:10}
+                </style>
+                <path d="M82 2L62 22 42 2z"/>
+                <path class="bt0" d="M48 2h-6l20 20v-6z"/>
+                <path d="M76 2L62 16v6L82 2z"/>
+                <path d="M62 22l14 40-14 20-14-20z"/>
+                <path d="M74.1 56.7L62 74v8l14-20z"/>
+                <path class="bt0" d="M49.9 56.7L48 62l14 20v-8z"/>
+                <path class="bt1" d="M122 2l-20 20H62L82 2h34z"/>
+                <path class="bt1" d="M62 22H22L2 2h40z"/>
+                <path class="bt2" d="M82 2H42"/>
+                <path class="bt2" d="M42 2H2l20 20h40z"/>
+                <path class="bt2" d="M82 2h40l-20 20H62z"/>
+                <path class="bt2" d="M48 62l14 20 14-20-14-40z"/>
+            </symbol>
+
+            <symbol id="logo--highlight" viewBox="0 0 372 252">
+                <style>
+                    .ht0{fill:#8d8c8e}
+                    .ht1{fill:#86aab3}
+                    .ht2{fill:#a5eeff}
+                    .ht3{fill:#c9f5ff}
+                    .ht4{fill:none;
+                      stroke:#000;
+                      stroke-width:12;
+                      stroke-linecap:round;
+                      stroke-linejoin:round;
+                      stroke-miterlimit:10}
+                </style>
+                <path class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
+                <path class="ht0" d="M186 66H66L6 6h120z"/>
+                <path class="ht1" d="M246 6l-60 60V42l36-36z"/>
+                <path class="ht1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                <path class="ht2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
+                <path class="ht2" d="M222 6l-36 36-36-36z"/>
+                <path class="ht3" d="M186 66l9 25.7-9 25.7z"/>
+                <path class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                <path class="ht3" d="M186 42v24L126 6h24z"/>
+                <path class="ht4" d="M246 6H126"/>
+                <path class="ht4" d="M126 6H6l60 60h120z"/>
+                <path class="ht4" d="M246 6h120l-60 60H186z"/>
+                <path class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
+            </symbol>
+
+            <symbol id="logo--at-home" viewBox="0 0 372 252">
+                <style>
+                    .st0{fill:#8d8c8e}
+                    .st1{fill:#357280}
+                    .st2{fill:#69e3ff}
+                    .st3{fill:#a5eeff}
+                    .st4{fill:none;
+                      stroke:#000;
+                      stroke-width:12;
+                      stroke-linecap:round;
+                      stroke-linejoin:round;
+                      stroke-miterlimit:10}
+                </style>
+                <path class="st0" d="M366 6l-60 60H186l60-60h102z"/>
+                <path class="st0" d="M186 66H66L6 6h120z"/>
+                <path class="st1" d="M246 6l-60 60V42l36-36z"/>
+                <path class="st1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                <path class="st2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
+                <path class="st2" d="M222 6l-36 36-36-36z"/>
+                <path class="st3" d="M186 66l9 25.7-9 25.7z"/>
+                <path class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                <path class="st3" d="M186 42v24L126 6h24z"/>
+                <path class="st4" d="M246 6H126"/>
+                <path class="st4" d="M126 6H6l60 60h120z"/>
+                <path class="st4" d="M246 6h120l-60 60H186z"/>
+                <path class="st4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
+            </symbol>
+        </svg>
+    </div>
+
     <div class="site__header-wrapper">
         <header class="site__header">
-
             <a id="site__logo" class="site__logo logo--status" href="/">
-                <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                    <symbol id="logo--basic" viewBox="0 0 124 84">
-                        <style>
-                            .bt0{fill:#a5eeff}
-                            .bt1{fill:#8d8c8e}
-                            .bt2{fill:none;
-                                stroke:#000;
-                                stroke-width:4;
-                                stroke-linecap:round;
-                                stroke-linejoin:round;
-                                stroke-miterlimit:10}
-                        </style>
-                        <path d="M82 2L62 22 42 2z"/>
-                        <path class="bt0" d="M48 2h-6l20 20v-6z"/>
-                        <path d="M76 2L62 16v6L82 2z"/>
-                        <path d="M62 22l14 40-14 20-14-20z"/>
-                        <path d="M74.1 56.7L62 74v8l14-20z"/>
-                        <path class="bt0" d="M49.9 56.7L48 62l14 20v-8z"/>
-                        <path class="bt1" d="M122 2l-20 20H62L82 2h34z"/>
-                        <path class="bt1" d="M62 22H22L2 2h40z"/>
-                        <path class="bt2" d="M82 2H42"/>
-                        <path class="bt2" d="M42 2H2l20 20h40z"/>
-                        <path class="bt2" d="M82 2h40l-20 20H62z"/>
-                        <path class="bt2" d="M48 62l14 20 14-20-14-40z"/>
-                    </symbol>
-
-                    <symbol id="logo--highlight" viewBox="0 0 372 252">
-                        <style>
-                            .ht0{fill:#8d8c8e}
-                            .ht1{fill:#86aab3}
-                            .ht2{fill:#a5eeff}
-                            .ht3{fill:#c9f5ff}
-                            .ht4{fill:none;
-                            stroke:#000;
-                            stroke-width:12;
-                            stroke-linecap:round;
-                            stroke-linejoin:round;
-                            stroke-miterlimit:10}
-                        </style>
-                        <path class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
-                        <path class="ht0" d="M186 66H66L6 6h120z"/>
-                        <path class="ht1" d="M246 6l-60 60V42l36-36z"/>
-                        <path class="ht1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
-                        <path class="ht2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
-                        <path class="ht2" d="M222 6l-36 36-36-36z"/>
-                        <path class="ht3" d="M186 66l9 25.7-9 25.7z"/> 1.7
-                        <path class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
-                        <path class="ht3" d="M186 42v24L126 6h24z"/>
-                        <path class="ht4" d="M246 6H126"/>
-                        <path class="ht4" d="M126 6H6l60 60h120z"/>
-                        <path class="ht4" d="M246 6h120l-60 60H186z"/>
-                        <path class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
-                    </symbol>
-
-                    <symbol id="logo--at-home" viewBox="0 0 372 252">
-                        <style>
-                            .st0{fill:#8d8c8e}
-                            .st1{fill:#357280}
-                            .st2{fill:#69e3ff}
-                            .st3{fill:#a5eeff}
-                            .st4{fill:none;
-                            stroke:#000;
-                            stroke-width:12;
-                            stroke-linecap:round;
-                            stroke-linejoin:round;
-                            stroke-miterlimit:10}
-                        </style>
-                        <path class="st0" d="M366 6l-60 60H186l60-60h102z"/>
-                        <path class="st0" d="M186 66H66L6 6h120z"/>
-                        <path class="st1" d="M246 6l-60 60V42l36-36z"/>
-                        <path class="st1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
-                        <path class="st2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
-                        <path class="st2" d="M222 6l-36 36-36-36z"/>
-                        <path class="st3" d="M186 66l9 25.7-9 25.7z"/>
-                        <path class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
-                        <path class="st3" d="M186 42v24L126 6h24z"/>
-                        <path class="st4" d="M246 6H126"/>
-                        <path class="st4" d="M126 6H6l60 60h120z"/>
-                        <path class="st4" d="M246 6h120l-60 60H186z"/>
-                        <path class="st4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
-                    </symbol>
-                </svg>
-                <!-- use the symbols here -->
+            <!-- use the symbols here -->
                 {% if page.title != "Home" %}
                     <svg class="logo--basic" viewBox="0 0 124 84">
                         <use xlink:href="#logo--basic"></use>
@@ -198,6 +200,5 @@
             <div id="nav-wrapper" class="nav-wrapper">
                 {% include nav.html %}
             </div>
-
          </header>
     </div> <!-- end nav section -->
