--- a/_includes/header.html
+++ b/_includes/header.html
@@ -139,7 +139,7 @@
                 <path class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
             </symbol>
 
-            <symbol id="logo--at-home" viewBox="0 0 372 252">
+            <symbol id="logo--at-home" preserveAspectRatio="xMidYMid meet" viewBox="0 0 372 252">
                 <style>
                     .st0{fill:#8d8c8e}
                     .st1{fill:#357280}
@@ -178,8 +178,8 @@
                         <use xlink:href="#logo--basic"></use>
                     </svg>
                 {% else %}
-                    <svg class="logo--at-home" viewBox="0 0 372 252">
-                        <use xlink:href="#logo--at-home" preserveAspectRatio="xMidYMid slice"></use>
+                    <svg class="logo--at-home" viewBox="0 0 372 252" preserveAspectRatio="xMidYMid meet">
+                        <use xlink:href="#logo--at-home"></use>
                     </svg>
                 {% endif %}
 
