--- a/_includes/header.html
+++ b/_includes/header.html
@@ -174,7 +174,7 @@
             <a id="site__logo" class="site__logo logo--status" href="/">
               <div class="svg-positioner">
             <!-- use the symbols here -->
-                {% if page.title != "Home" %}
+                {% if page.title != "Current Projects" %}
                     <svg class="logo--basic" viewBox="0 0 124 84">
                         <use xlink:href="#logo--basic"></use>
                     </svg>
