--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,28 +12,6 @@ layout: default
     {{ content }}
   </div>
 
-
-  <div id="disqus_thread"></div>
-  <script>
-    /*
-    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-    */
-
-    var disqus_config = function () {
-        this.page.url = "http://{{ page.url | replace:'index.html', '' | prepend: site.baseurl | prepend: site.url }}";
-        this.page.identifier = "{{ page.title }}";
-    };
-
-    (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-
-        s.src = '//timolawl.disqus.com/embed.js';
-
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+  {% include disqus.html %}
 
 </article>
