--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,10 +7,17 @@ layout: default
     <h1 class="page__title">{{ page.title }}</h1>
   </header>
   <div class="page__content">
+    {% if page.title != "Current Projects" %}
       <!-- specific page styling -->
-    <div class="{{ page.title | downcase }}__content">
-        {{ content }}
-    </div>
+      <div class="{{ page.title | downcase }}__content">
+          {{ content }}
+      </div>
+    {% else %}
+      <!-- specific page styling -->
+      <div class="home__content">
+          {{ content }}
+      </div>
+    {% endif %}
   </div>
 
 </article>
