--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -62,10 +62,12 @@
 
   &__snapshot {
     width: 100%;
+    /*
     filter: grayscale(1);
     &:hover {
       filter: grayscale(0);
     }
+    */
   }
 
   &__summary {
