--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,9 @@
                 </svg>
             </a>
         </div>
+        <p class="footer__message">Last updated <span class="last-updated"></span><br/>
         <span class="copyright">&copy; 2016 - {{ site.time | date: '%Y' }} Tim Chiang, unless otherwise noted.</span>
+        </p>
     </div>
   </footer>
   {% include scripts.html %}
